// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Tag Link renders correctly 1`] = `
<jest>
  <a
    class="ecl-tag"
    href="/example"
  >
    Tag label
  </a>
</jest>
`;

exports[`Tag Link renders correctly with an external link 1`] = `
<jest>
  <a
    class="ecl-tag"
    href="/example"
  >
    Tag label
    <span
      aria-hidden="true"
      class="wt-icon--external ecl-icon ecl-icon--2xs ecl-tag__icon ecl-tag__icon--external ecl-icon--external"
    />
  </a>
</jest>
`;

exports[`Tag Link renders correctly with extra attributes 1`] = `
<jest>
  <a
    class="ecl-tag"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    href="/example"
  >
    Tag label
  </a>
</jest>
`;

exports[`Tag Link renders correctly with extra class names 1`] = `
<jest>
  <a
    class="ecl-tag custom-class custom-class--test"
    href="/example"
  >
    Tag label
  </a>
</jest>
`;

exports[`Tag Prefilter renders correctly 1`] = `
<jest>
  <a
    class="ecl-tag ecl-tag--prefilter"
    href="/example"
  >
    Tag label
  </a>
</jest>
`;

exports[`Tag Removable renders correctly 1`] = `
<jest>
  <button
    class="ecl-tag ecl-tag--removable"
    type="button"
  >
    Tag label
    <span
      class="ecl-tag__icon"
    >
      <span
        aria-hidden="false"
        class="wt-icon--close-outline ecl-icon ecl-icon--xs ecl-tag__icon-close ecl-icon--close-outline"
        role="img"
        title="Dismiss"
      />
    </span>
  </button>
</jest>
`;

exports[`Tag Set renders correctly (prefilter) 1`] = `
<jest>
  <div
    class="ecl-tag-set ecl-tag-set--prefilter"
  >
    <span
      class="ecl-tag-set__label"
    >
      Quick filter
    </span>
    <ul
      class="ecl-tag-set__list"
    >
      <li
        class="ecl-tag-set__item"
      >
        <a
          class="ecl-tag ecl-tag--prefilter"
          href="/example"
        >
          Tag label
        </a>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <a
          class="ecl-tag ecl-tag--prefilter"
          href=""
        >
          Tag label
        </a>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <a
          class="ecl-tag ecl-tag--prefilter"
          href=""
        >
          Tag label
        </a>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <a
          class="ecl-tag ecl-tag--prefilter"
          href=""
        >
          Tag label
        </a>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <a
          class="ecl-tag ecl-tag--prefilter"
          href="/example"
        >
          Tag label
        </a>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <a
          class="ecl-tag ecl-tag--prefilter"
          href=""
        >
          Tag label
        </a>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <a
          class="ecl-tag ecl-tag--prefilter"
          href="/example"
        >
          Tag label
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`Tag Set renders correctly 1`] = `
<jest>
  <div
    class="ecl-tag-set"
  >
    <span
      class="ecl-tag-set__label"
    >
      Quick filter
    </span>
    <ul
      class="ecl-tag-set__list"
    >
      <li
        class="ecl-tag-set__item"
      >
        <a
          class="ecl-tag"
          href="/example"
        >
          Tag label
        </a>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <button
          class="ecl-tag ecl-tag--removable"
          type="button"
        >
          Tag label
          <span
            class="ecl-tag__icon"
          >
            <span
              aria-hidden="false"
              class="wt-icon--close-outline ecl-icon ecl-icon--xs ecl-tag__icon-close ecl-icon--close-outline"
              role="img"
              title="Dismiss"
            />
          </span>
        </button>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <button
          class="ecl-tag ecl-tag--removable"
          type="button"
        >
          Tag label
          <span
            class="ecl-tag__icon"
          >
            <span
              aria-hidden="false"
              class="wt-icon--close-outline ecl-icon ecl-icon--xs ecl-tag__icon-close ecl-icon--close-outline"
              role="img"
              title="Dismiss"
            />
          </span>
        </button>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <button
          class="ecl-tag ecl-tag--removable"
          type="button"
        >
          Tag label
          <span
            class="ecl-tag__icon"
          >
            <span
              aria-hidden="false"
              class="wt-icon--close-outline ecl-icon ecl-icon--xs ecl-tag__icon-close ecl-icon--close-outline"
              role="img"
              title="Dismiss"
            />
          </span>
        </button>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <a
          class="ecl-tag"
          href="/example"
        >
          Tag label
        </a>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <button
          class="ecl-tag ecl-tag--removable"
          type="button"
        >
          Tag label
          <span
            class="ecl-tag__icon"
          >
            <span
              aria-hidden="false"
              class="wt-icon--close-outline ecl-icon ecl-icon--xs ecl-tag__icon-close ecl-icon--close-outline"
              role="img"
              title="Dismiss"
            />
          </span>
        </button>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <a
          class="ecl-tag"
          href="/example"
        >
          Tag label
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`Tag Set renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-tag-set"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <span
      class="ecl-tag-set__label"
    >
      Quick filter
    </span>
    <ul
      class="ecl-tag-set__list"
    >
      <li
        class="ecl-tag-set__item"
      >
        <a
          class="ecl-tag"
          href="/example"
        >
          Tag label
        </a>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <button
          class="ecl-tag ecl-tag--removable"
          type="button"
        >
          Tag label
          <span
            class="ecl-tag__icon"
          >
            <span
              aria-hidden="false"
              class="wt-icon--close-outline ecl-icon ecl-icon--xs ecl-tag__icon-close ecl-icon--close-outline"
              role="img"
              title="Dismiss"
            />
          </span>
        </button>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <button
          class="ecl-tag ecl-tag--removable"
          type="button"
        >
          Tag label
          <span
            class="ecl-tag__icon"
          >
            <span
              aria-hidden="false"
              class="wt-icon--close-outline ecl-icon ecl-icon--xs ecl-tag__icon-close ecl-icon--close-outline"
              role="img"
              title="Dismiss"
            />
          </span>
        </button>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <button
          class="ecl-tag ecl-tag--removable"
          type="button"
        >
          Tag label
          <span
            class="ecl-tag__icon"
          >
            <span
              aria-hidden="false"
              class="wt-icon--close-outline ecl-icon ecl-icon--xs ecl-tag__icon-close ecl-icon--close-outline"
              role="img"
              title="Dismiss"
            />
          </span>
        </button>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <a
          class="ecl-tag"
          href="/example"
        >
          Tag label
        </a>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <button
          class="ecl-tag ecl-tag--removable"
          type="button"
        >
          Tag label
          <span
            class="ecl-tag__icon"
          >
            <span
              aria-hidden="false"
              class="wt-icon--close-outline ecl-icon ecl-icon--xs ecl-tag__icon-close ecl-icon--close-outline"
              role="img"
              title="Dismiss"
            />
          </span>
        </button>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <a
          class="ecl-tag"
          href="/example"
        >
          Tag label
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`Tag Set renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-tag-set custom-class custom-class--test"
  >
    <span
      class="ecl-tag-set__label"
    >
      Quick filter
    </span>
    <ul
      class="ecl-tag-set__list"
    >
      <li
        class="ecl-tag-set__item"
      >
        <a
          class="ecl-tag"
          href="/example"
        >
          Tag label
        </a>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <button
          class="ecl-tag ecl-tag--removable"
          type="button"
        >
          Tag label
          <span
            class="ecl-tag__icon"
          >
            <span
              aria-hidden="false"
              class="wt-icon--close-outline ecl-icon ecl-icon--xs ecl-tag__icon-close ecl-icon--close-outline"
              role="img"
              title="Dismiss"
            />
          </span>
        </button>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <button
          class="ecl-tag ecl-tag--removable"
          type="button"
        >
          Tag label
          <span
            class="ecl-tag__icon"
          >
            <span
              aria-hidden="false"
              class="wt-icon--close-outline ecl-icon ecl-icon--xs ecl-tag__icon-close ecl-icon--close-outline"
              role="img"
              title="Dismiss"
            />
          </span>
        </button>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <button
          class="ecl-tag ecl-tag--removable"
          type="button"
        >
          Tag label
          <span
            class="ecl-tag__icon"
          >
            <span
              aria-hidden="false"
              class="wt-icon--close-outline ecl-icon ecl-icon--xs ecl-tag__icon-close ecl-icon--close-outline"
              role="img"
              title="Dismiss"
            />
          </span>
        </button>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <a
          class="ecl-tag"
          href="/example"
        >
          Tag label
        </a>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <button
          class="ecl-tag ecl-tag--removable"
          type="button"
        >
          Tag label
          <span
            class="ecl-tag__icon"
          >
            <span
              aria-hidden="false"
              class="wt-icon--close-outline ecl-icon ecl-icon--xs ecl-tag__icon-close ecl-icon--close-outline"
              role="img"
              title="Dismiss"
            />
          </span>
        </button>
      </li>
      <li
        class="ecl-tag-set__item"
      >
        <a
          class="ecl-tag"
          href="/example"
        >
          Tag label
        </a>
      </li>
    </ul>
  </div>
</jest>
`;
